@@ -427,8 +427,8 @@
              (complex (log (- number)) (coerce pi 'single-float))
              (let ((numerator (numerator number))
                    (denominator (denominator number)))
-               (if (= (integer-length numerator)
-                      (integer-length denominator))
+               (if (and (<= -1 (- (integer-length numerator) (integer-length denominator)) 1)
+                        (<= 3/4 number 5/4))
                    (coerce (%log1p (coerce (- number 1) 'double-float))
                            'single-float)
                    (coerce (/ (- (truly-the double-float (log2/nonnegative-integer numerator))
